--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,5 @@ body {
   align-items: center;
   height: 100vh;
   background-color: #c5e4e7;
+  font-family: "Space Mono", monospace, "sans-serif";
 }
