lifted state for custom input, reset button now clears custom input values.

--- a/src/components/TipInputs/CustomInput.module.css
+++ b/src/components/TipInputs/CustomInput.module.css
@@ -17,6 +17,10 @@
   outline-color: #26c2ae;
 }
 
+.custom_input_active {
+  border: 1px solid #26c2ae;
+}
+
 .custom_input:hover {
   border: 1px solid #26c2ae;
   outline-color: #26c2ae;
